infra/k8s/devsecops/apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sagelms-devsecops
  labels:
    app.kubernetes.io/part-of: sagelms
    sagelms.io/environment: devsecops
